--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/netinfo": "^9.3.7",
+    "axios": "^1.3.2",
+    "indicative": "^7.4.4",
     "native-base": "^3.4.25",
     "react": "18.0.0",
     "react-native": "0.69.0",
+    "react-native-element-dropdown": "^2.6.0",
     "react-native-otp-textinput": "^1.0.0",
     "react-native-webview": "^11.26.1"
   },
