--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/netinfo": "^9.3.7",
+    "@react-native-material/core": "^1.3.7",
     "axios": "^1.3.2",
     "indicative": "^7.4.4",
     "native-base": "^3.4.25",
     "react": "18.0.0",
     "react-native": "0.69.0",
+    "react-native-asset": "^2.0.1",
     "react-native-ble-plx": "^2.0.3",
     "react-native-element-dropdown": "^2.6.0",
     "react-native-fast-image": "^8.6.3",
+    "react-native-image-picker": "^5.0.2",
     "react-native-image-slider-box": "github:megamaxs1234/react-native-image-slider-box",
     "react-native-otp-textinput": "^1.0.0",
-    "react-native-webview": "^11.26.1"
+    "react-native-webview": "^11.26.1",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
