--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-image-picker": "^5.0.2",
     "react-native-image-slider-box": "github:megamaxs1234/react-native-image-slider-box",
     "react-native-otp-textinput": "^1.0.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-webview": "^11.26.1",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
