--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/geolocation": "^3.0.5",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^9.3.7",
     "@react-native-material/core": "^1.3.7",
     "axios": "^1.3.2",
     "indicative": "^7.4.4",
+    "moment": "^2.29.4",
     "native-base": "^3.4.25",
     "react": "18.0.0",
     "react-native": "0.69.0",
@@ -22,10 +25,12 @@
     "react-native-ble-plx": "^2.0.3",
     "react-native-element-dropdown": "^2.6.0",
     "react-native-fast-image": "^8.6.3",
+    "react-native-gifted-chat": "^1.1.1",
     "react-native-image-picker": "^5.0.2",
     "react-native-image-slider-box": "github:megamaxs1234/react-native-image-slider-box",
     "react-native-otp-textinput": "^1.0.0",
     "react-native-push-notification": "^8.1.1",
+    "react-native-safe-area-context": "^4.2.4",
     "react-native-webview": "^11.26.1",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
@@ -42,14 +47,13 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-image-slider-banner": "^1.0.3",
     "react-native-localize": "^2.2.4",
     "react-native-modal": "^13.0.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^2.14.4",
-    "react-native-safe-area-context": "^3.4.1",
-    "react-native-screens": "^3.19.0",
+    "react-native-screens": "^3.20.0",
     "react-native-select-dropdown": "^3.2.1",
     "react-native-share": "^8.1.0",
     "react-native-splash-screen": "^3.0.6",
