--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -270,6 +270,8 @@ dependencies {
 
     implementation project(':react-native-splash-screen')
 
+    implementation project(':@react-native-voice_voice')
+
     implementation platform('com.google.firebase:firebase-bom:28.2.1')
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
