--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@react-native-community/geolocation": "^3.0.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^9.3.7",
+    "@react-native-firebase/app": "^17.3.1",
+    "@react-native-firebase/dynamic-links": "^17.3.1",
     "@react-native-material/core": "^1.3.7",
+    "@react-native-voice/voice": "^3.2.4",
     "axios": "^1.3.2",
     "indicative": "^7.4.4",
     "moment": "^2.29.4",
@@ -34,7 +37,8 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-webview": "^11.26.1",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "uri-scheme": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
